--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.9.0",
 		"clsx": "^2.1.1",
 		"next": "15.5.4",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"react-icons": "^5.5.0"
+		"react-icons": "^5.5.0",
+		"react-redux": "^9.2.0",
+		"react-toastify": "^11.0.5"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
